# rust-reborn

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: AUTH_MIDDLEWARE.md  ROUTES.md  TESTING_API.md
migrations/: 20240101000001_create_users_table.down.sql  20240101000001_create_users_table.sql  20240101000001_create_users_table.up.sql  20260105035622_create_table_products.down.sql  20260105035622_create_table_products.up.sql  20260105065300_create_table_categories.down.sql  20260105065300_create_table_categories.up.sql
services/api_server/: Cargo.toml
services/api_server/src/: main.rs  routes.rs
services/api_server/src/config/: config.rs
services/api_server/src/fw/: auth.rs  build_app.rs  db.rs  load_config.rs  mod.rs  router.rs
services/api_server/src/infrastructure/http/extractors/: auth_user.rs  mod.rs
services/api_server/src/infrastructure/http/middleware/: auth_middleware.rs  mod.rs
services/api_server/src/infrastructure/telemetry/: telemetry.rs
services/api_server/src/presentation/: mod.rs  openapi.rs
shared/contracts/: Cargo.toml
shared/contracts/src/: auth.rs  config.rs  error.rs  lib.rs  telemetry.rs  validation.rs
shared/contracts/src/auth/: claims.rs
shared/contracts/src/common/: code_generator.rs  code_generator_impl.rs  mod.rs  pagination.rs  response.rs
shared/contracts/src/middleware/: auth_extractor.rs  auth_middleware.rs  mod.rs
