[workspace]
members = [
    "packages/core",
    "packages/auth",
    "services/api_server",
    "shared/contracts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"    
authors = ["@drnhsproject"]
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }

utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

validator = { version = "0.20.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "2.0.17"

async-trait = "0.1"
futures = "0.3"

jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15.19"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.13.1", features = ["json", "multipart"] }
once_cell = "1.19"
