[package]
name = "rust-reborn-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "api_server"
path = "src/main.rs"

[dependencies]
# Internal packages
rust-reborn-core = { path = "../../packages/core" }
rust-reborn-auth = { path = "../../packages/auth" }
rust-reborn-contracts = { path = "../../shared/contracts" }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }